# rust_exercises

./: Cargo.toml  README.md  docker-compose.yml
src/: fatorial.rs  main.rs  mdc.rs  media.rs
