[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "media"
path = "src/media.rs"

[[bin]]
name = "mdc"
path = "src/mdc.rs"

[[bin]]
name = "fatorial"
path = "src/fatorial.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
